# internal/core/issuer/postgres/models.go
@@ -10,11 +10,12 @@ import (
 )
 
 type Issuer struct {
-	CommonName       string                 `gorm:"primaryKey"`
-	Verified         bool                   `gorm:"not null;type:boolean;default:false"`
-	Organization     string                 `gorm:"not null;type:varchar(256);"`
-	SubOrganization  string                 `gorm:"not null;type:varchar(256);"`
-	PublicKey        *idtypes.Jwk           `gorm:"embedded;embeddedPrefix:public_key_"`
+	CommonName       string       `gorm:"primaryKey"`
+	Verified         bool         `gorm:"not null;type:boolean;default:false"`
+	Organization     string       `gorm:"not null;type:varchar(256);"`
+	SubOrganization  string       `gorm:"not null;type:varchar(256);"`
+	PublicKey        *idtypes.Jwk `gorm:"embedded;embeddedPrefix:public_key_"`
+	AuthType         types.IssuerAuthType
 	ResolverMetadata []*id.ResolverMetadata `gorm:"foreignKey:Controller"`
 }
 
@@ -22,6 +23,7 @@ func (i *Issuer) ToCoreType() *types.Issuer {
 	return &types.Issuer{
 		CommonName:      i.CommonName,
 		Verified:        i.Verified,
+		AuthType:        i.AuthType,
 		Organization:    i.Organization,
 		SubOrganization: i.SubOrganization,
 		PublicKey:       i.PublicKey,
@@ -32,6 +34,7 @@ func newIssuerModel(src *types.Issuer) *Issuer {
 	return &Issuer{
 		CommonName:      src.CommonName,
 		Verified:        src.Verified,
+		AuthType:        src.AuthType,
 		Organization:    src.Organization,
 		SubOrganization: src.SubOrganization,
 		PublicKey:       src.PublicKey,
